# rbcodes

./: .coveragerc  .gitignore  .zenodo.json  1  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  INSTALLATION.md  LICENSE  LICENSE.txt  README.md  README.rst  Untitled.ipynb  __init__.py  environment.yml  example-analysis-cgm.ipynb  outfile.json  outfile.p  pyproject.toml  rbcodes.code-workspace  requirements_20220128.txt  requirements_20220328.txt  requirements_20220329.txt  requirements_simple.txt  requirements_streamlit.txt  restructure.py  setup.cfg  setup.py  structure.txt
.ipynb_checkpoints/: example-analysis-cgm-checkpoint.ipynb  test-optimzied-rb_spec-checkpoint
GUI/: rb_cont.py
GUIs/: LLSFitter_GUI.py  PlotSpec_Integrated.py  call_linetools_contfitter.py  guess_abs_line_vel_gui.py  interactive_cont_jn.py  interactive_continuum_fit.py  launch_batch.py  launch_specgui.py  rb_cont.py  rb_fit_interactive_continuum.py  rb_interactive_mask.py  rb_interactive_vpfit_singlet.py  rb_plot_spec.py  rb_spec.py  rb_spec_unit_tests.py  rb_specgui.py  rb_specgui_new.py  rb_test.py  test  test.py  test_new.py  vStack.py
GUIs/abstools/: AbsToolsLauncher.py  Absorber  Absorber.py  Help.html  Metal_Plot  Metal_Plot.py  README  README.md  Spectrum_Analysis_z_0.348.json  Spectrum_Analysis_z_0.348.p  abstools_launcher.py  cleanup.py  config.py  equivalent_width.py  event_handler.py  intervening_utils.py  json_utils.py  plotting.py  simplified_abstools_launcher.py  test_ions_data.json  ui_components.py
GUIs/gui_dev/: Spec_Inspect.py  connect_XSpectrum1D.py  dialogs_example.py  guess_transition.py  gui_frame_io.py  gui_io.py  gui_io_xspec.py  gui_linelists.ascii  io.py  linelist_selection.py  main.py  menu_toolbars.py  message_box.py  prep_guidb.py  spec_addtional2d.py  spec_advanced2d.py  spec_fit_gauss2d.py  spec_hist.py  spec_plot.py  tableview_pandas.py  user_manual.py  (+4 more)
IGM/: LLSFitter.py  compute_EW.py  cont_fit_poly_ransac.py  find_line_features_wavelet.py  fit_continuum_full_spec.py  lens_sep.py  lens_sep_to_kpc.py  ransac_contfit.py  ransac_sdss_fit_cont.ipynb  rb_iter_contfit.py  rb_setline.py  rb_setline.py.bak  rb_specbin.py
app/: environment.yml  main.py  requirements.txt
assets/: README.md
catalog/: GalaxyGroupFinder_slow.py  convert_FIRE_coordinates.py  galaxy_group_finder.py  rb_search.py
data/: J1429_rb_flux_spectrum-3300.fits  J1429_rb_flux_spectrum-3500.fits  J1429_rb_flux_spectrum-3700.fits
docs/: Makefile  conf.py  docstring_extractor.py  index.rst  main_readme.md  rbcodes.GUIs.rst  rbcodes.IGM.rst
example-data/: J075103+424211a_F.fits  _knots.jsn  batch_template.csv  batch_template.json  example_dataset.txt  galaxy1.fits  jw01243001001_01101_00001_nrca5_cal.fits  jw01243001001_01101_00001_nrca5_x1d.fits  jw01243001001_01101_00002_nrca5_cal.fits  jw01243001001_01101_00002_nrca5_x1d.fits  jw01243001001_01101_00003_nrca5_cal.fits  jw01243001001_01101_00003_nrca5_x1d.fits  sdss1.fits  sdss2.fits  spec-0398-51789-0282.fits  spec-0408-51821-0503.fits  spec-1678-53433-0425.fits  spec-6781-56274-0989.fits  spec-6781-56274-0994.fits  spec-6782-56273-0568.fits  spec2d_coadd_QSO_J0100_sID010242.fits  spec2d_rectified_coadd_IRAS-05248-7007_ModA.fits  spec2d_rectified_coadd_IRAS-05248-7007_ModB.fits  test.fits  test.json  test.txt  test_absorbers.csv  test_batch.json  test_norm.fits  test_normalized.fits
gui_dev/: dialogs_example.py  gui_io_xspec.py  main.py  user_manual.py  user_manual.txt
halo/: halo_profile.py  halos.py  mstar2mhalo.py  smhm_med_params.txt
rbstat/: rb_boot.py  rb_wilsonscore.py
scripts/: run_abstools.py  run_multispecviewer.py  run_spectral_gui.py
stat/: rb_boot.py  rb_wilsonscore.py
test/: fits_header_explorer.ipynb  main-test.py  mod_spec_header.ipynb  test.ipynb
tests/: __init__.py  conftest.py  rb_spec_unit_tests.py  test_skeleton.py
utils/: compute_SNR_1d.py  filter_2d_spec.py  galaxy_qso_pa.py  rb_spectrum.py  rb_utility.py  rb_x1d_id.py  rgb_images.py  write_ds9_regions.py
(+437 files in other folders)
